fix: add z-index dropdown select

--- a/scss/components/auth/_select.scss
+++ b/scss/components/auth/_select.scss
@@ -49,6 +49,7 @@
         left: 0;
         width: 100%;
         overflow: auto;
+        z-index: 10;
     }
 
     &__picked {
